crates/mega-evm/tests/satin/snapshots/satin__detention__every_volatile_read_caps_the_transaction_from_where_it_read.snap
---
source: crates/mega-evm/tests/satin/detention.rs
expression: summaries
---
{
  "BALANCE, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 25288828); stop ComputeGas limit 25288828 used 25288457; regular 25303457 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 25330737; data_size 310 write_records 0; logs 0 accounts 5; view 0xe021bc8a9d679ab43a1a2c1cf99d5da2b85ac35bfb20870d54b3640f1a0a3062",
  "BALANCE, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 25288828); stop ComputeGas limit 25288828 used 25288457; regular 25303457 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 25330737; data_size 310 write_records 0; logs 0 accounts 5; view 0xa1cc300152ffaeff220eaf0567e18f4604c5f1aa810aa520eb1f762401f27d5e",
  "BASEFEE, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 25288727); stop ComputeGas limit 25288727 used 25288356; regular 25303356 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 25330636; data_size 310 write_records 0; logs 0 accounts 5; view 0xcb53a36b668621bfb50251bae54a7e2b2e4007e93f4efccc396ca50cea7ece0a",
  "BASEFEE, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 25288727); stop ComputeGas limit 25288727 used 25288356; regular 25303356 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 25330636; data_size 310 write_records 0; logs 0 accounts 5; view 0x736445827a194c3cabb7f9175e7da370d2e73b97f09f18ee1914bdef697bdfb4",
  "BLOBBASEFEE, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 25288727); stop ComputeGas limit 25288727 used 25288356; regular 25303356 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 25330636; data_size 310 write_records 0; logs 0 accounts 5; view 0xcb53a36b668621bfb50251bae54a7e2b2e4007e93f4efccc396ca50cea7ece0a",
  "BLOBBASEFEE, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 25288727); stop ComputeGas limit 25288727 used 25288356; regular 25303356 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 25330636; data_size 310 write_records 0; logs 0 accounts 5; view 0x736445827a194c3cabb7f9175e7da370d2e73b97f09f18ee1914bdef697bdfb4",
  "BLOCKHASH, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 25288748); stop ComputeGas limit 25288748 used 25288377; regular 25303377 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 25330657; data_size 310 write_records 0; logs 0 accounts 5; view 0xcd31d4bbddeddb92523e2efd1af39bb731ed7cc3feb674394eee998e8441ec22",
  "BLOCKHASH, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 25288748); stop ComputeGas limit 25288748 used 25288377; regular 25303377 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 25330657; data_size 310 write_records 0; logs 0 accounts 5; view 0x7c64642c5644d9afedffb358e8109c8c3e97b36a6ad164792a07211dc152ba54",
  "CALL to an EIP-7702 delegator of the beneficiary, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 25291440); stop ComputeGas limit 25291440 used 25291069; regular 25306069 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 25333349; data_size 310 write_records 0; logs 0 accounts 5; view 0xbf0079be4c04001bd71d763f859b1f850ceccb5d57304d8415dd930e7b19463e",
  "CALL to an EIP-7702 delegator of the beneficiary, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 25291440); stop ComputeGas limit 25291440 used 25291069; regular 25306069 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 25333349; data_size 310 write_records 0; logs 0 accounts 5; view 0xcba0c393b7fccb1f2ab4b8f473e5e97f0cf9fc446ed69f6d0e7af5262aaca2ec",
  "CALL, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 25288840); stop ComputeGas limit 25288840 used 25288469; regular 25303469 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 25330749; data_size 310 write_records 0; logs 0 accounts 5; view 0xdf6d352ebef47516781ad39ae01f1ba11cdb5ae4264b17459f045e8fd46576b0",
  "CALL, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 25288840); stop ComputeGas limit 25288840 used 25288469; regular 25303469 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 25330749; data_size 310 write_records 0; logs 0 accounts 5; view 0xb40b7c1382565a142cc452ccf17184c843ec45440c3baa42c0ec8f831b7f7a1d",
  "CALLCODE, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 25288840); stop ComputeGas limit 25288840 used 25288469; regular 25303469 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 25330749; data_size 310 write_records 0; logs 0 accounts 5; view 0xdf6d352ebef47516781ad39ae01f1ba11cdb5ae4264b17459f045e8fd46576b0",
  "CALLCODE, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 25288840); stop ComputeGas limit 25288840 used 25288469; regular 25303469 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 25330749; data_size 310 write_records 0; logs 0 accounts 5; view 0xb40b7c1382565a142cc452ccf17184c843ec45440c3baa42c0ec8f831b7f7a1d",
  "COINBASE, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 25288727); stop ComputeGas limit 25288727 used 25288356; regular 25303356 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 25330636; data_size 310 write_records 0; logs 0 accounts 5; view 0xcb53a36b668621bfb50251bae54a7e2b2e4007e93f4efccc396ca50cea7ece0a",
  "COINBASE, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 25288727); stop ComputeGas limit 25288727 used 25288356; regular 25303356 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 25330636; data_size 310 write_records 0; logs 0 accounts 5; view 0x736445827a194c3cabb7f9175e7da370d2e73b97f09f18ee1914bdef697bdfb4",
  "DELEGATECALL, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 25288838); stop ComputeGas limit 25288838 used 25288467; regular 25303467 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 25330747; data_size 310 write_records 0; logs 0 accounts 5; view 0xb6da5ad4478674612faae33cf9ddf2f72985611ea3e6bcf04f4240e80b9d2579",
  "DELEGATECALL, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 25288838); stop ComputeGas limit 25288838 used 25288467; regular 25303467 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 25330747; data_size 310 write_records 0; logs 0 accounts 5; view 0x641baf5236fb256263d78330aa486d72e07f11000d940de522319eed1331ea4a",
  "EXTCODECOPY, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 25288838); stop ComputeGas limit 25288838 used 25288465; regular 25303465 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 25330745; data_size 310 write_records 0; logs 0 accounts 5; view 0x3416e6ea736179548283e1068ef7cf42c61694e73b3646ff32f20efa98ba5ee4",
  "EXTCODECOPY, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 25288838); stop ComputeGas limit 25288838 used 25288465; regular 25303465 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 25330745; data_size 310 write_records 0; logs 0 accounts 5; view 0x5c03dccf75164c3ead5ad2d3229d40680a73a12e5db2f7fab985f76f82aa1ef8",
  "EXTCODEHASH, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 25288828); stop ComputeGas limit 25288828 used 25288457; regular 25303457 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 25330737; data_size 310 write_records 0; logs 0 accounts 5; view 0xe021bc8a9d679ab43a1a2c1cf99d5da2b85ac35bfb20870d54b3640f1a0a3062",
  "EXTCODEHASH, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 25288828); stop ComputeGas limit 25288828 used 25288457; regular 25303457 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 25330737; data_size 310 write_records 0; logs 0 accounts 5; view 0xa1cc300152ffaeff220eaf0567e18f4604c5f1aa810aa520eb1f762401f27d5e",
  "EXTCODESIZE, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 25288828); stop ComputeGas limit 25288828 used 25288457; regular 25303457 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 25330737; data_size 310 write_records 0; logs 0 accounts 5; view 0xe021bc8a9d679ab43a1a2c1cf99d5da2b85ac35bfb20870d54b3640f1a0a3062",
  "EXTCODESIZE, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 25288828); stop ComputeGas limit 25288828 used 25288457; regular 25303457 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 25330737; data_size 310 write_records 0; logs 0 accounts 5; view 0xa1cc300152ffaeff220eaf0567e18f4604c5f1aa810aa520eb1f762401f27d5e",
  "GASLIMIT, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 25288727); stop ComputeGas limit 25288727 used 25288356; regular 25303356 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 25330636; data_size 310 write_records 0; logs 0 accounts 5; view 0xcb53a36b668621bfb50251bae54a7e2b2e4007e93f4efccc396ca50cea7ece0a",
  "GASLIMIT, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 25288727); stop ComputeGas limit 25288727 used 25288356; regular 25303356 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 25330636; data_size 310 write_records 0; logs 0 accounts 5; view 0x736445827a194c3cabb7f9175e7da370d2e73b97f09f18ee1914bdef697bdfb4",
  "NUMBER, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 25288727); stop ComputeGas limit 25288727 used 25288356; regular 25303356 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 25330636; data_size 310 write_records 0; logs 0 accounts 5; view 0xcb53a36b668621bfb50251bae54a7e2b2e4007e93f4efccc396ca50cea7ece0a",
  "NUMBER, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 25288727); stop ComputeGas limit 25288727 used 25288356; regular 25303356 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 25330636; data_size 310 write_records 0; logs 0 accounts 5; view 0x736445827a194c3cabb7f9175e7da370d2e73b97f09f18ee1914bdef697bdfb4",
  "PREVRANDAO, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 25288727); stop ComputeGas limit 25288727 used 25288356; regular 25303356 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 25330636; data_size 310 write_records 0; logs 0 accounts 5; view 0xcb53a36b668621bfb50251bae54a7e2b2e4007e93f4efccc396ca50cea7ece0a",
  "PREVRANDAO, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 25288727); stop ComputeGas limit 25288727 used 25288356; regular 25303356 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 25330636; data_size 310 write_records 0; logs 0 accounts 5; view 0x736445827a194c3cabb7f9175e7da370d2e73b97f09f18ee1914bdef697bdfb4",
  "SELFDESTRUCT to the beneficiary, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 25296343); stop ComputeGas limit 25296343 used 25295972; regular 25310972 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 25338252; data_size 310 write_records 0; logs 0 accounts 5; view 0x8bccfb1a351af282d9e24feea6a50e3f1d66722c5939ea0f28752945de70abef",
  "SELFDESTRUCT to the beneficiary, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 25296343); stop ComputeGas limit 25296343 used 25295972; regular 25310972 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 25338252; data_size 310 write_records 0; logs 0 accounts 5; view 0x94b1a180261a394874c3590c12f2fe500216ecdb810581cc6ef7295bc7b5ea96",
  "SLOAD of the Oracle's storage, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 25293442); stop ComputeGas limit 25293442 used 25293073; regular 25308073 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 25335353; data_size 310 write_records 0; logs 0 accounts 5; view 0x920bd0b827c22916243bac9f8631687a907e235597abdb1fbefa105156170539",
  "SLOAD of the Oracle's storage, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 25293442); stop ComputeGas limit 25293442 used 25293073; regular 25308073 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 25335353; data_size 310 write_records 0; logs 0 accounts 5; view 0xfb25803601cd5174c5d334bd8ce15b556a94df9258f6d9d4edcee5cff860ceb3",
  "SLOTNUM, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 25288727); stop ComputeGas limit 25288727 used 25288356; regular 25303356 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 25330636; data_size 310 write_records 0; logs 0 accounts 5; view 0xcb53a36b668621bfb50251bae54a7e2b2e4007e93f4efccc396ca50cea7ece0a",
  "SLOTNUM, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 25288727); stop ComputeGas limit 25288727 used 25288356; regular 25303356 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 25330636; data_size 310 write_records 0; logs 0 accounts 5; view 0x736445827a194c3cabb7f9175e7da370d2e73b97f09f18ee1914bdef697bdfb4",
  "STATICCALL, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 25288838); stop ComputeGas limit 25288838 used 25288467; regular 25303467 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 25330747; data_size 310 write_records 0; logs 0 accounts 5; view 0xb6da5ad4478674612faae33cf9ddf2f72985611ea3e6bcf04f4240e80b9d2579",
  "STATICCALL, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 25288838); stop ComputeGas limit 25288838 used 25288467; regular 25303467 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 25330747; data_size 310 write_records 0; logs 0 accounts 5; view 0x641baf5236fb256263d78330aa486d72e07f11000d940de522319eed1331ea4a",
  "TIMESTAMP, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 25288727); stop ComputeGas limit 25288727 used 25288356; regular 25303356 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 25330636; data_size 310 write_records 0; logs 0 accounts 5; view 0xcb53a36b668621bfb50251bae54a7e2b2e4007e93f4efccc396ca50cea7ece0a",
  "TIMESTAMP, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 25288727); stop ComputeGas limit 25288727 used 25288356; regular 25303356 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 25330636; data_size 310 write_records 0; logs 0 accounts 5; view 0x736445827a194c3cabb7f9175e7da370d2e73b97f09f18ee1914bdef697bdfb4"
}
